--- a/running_record.ipynb
+++ b/running_record.ipynb
@@ -12752,6 +12752,263 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#%% s31\n",
+    "rid = 's31' # running id\n",
+    "from utils import *\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"]=\"0\"\n",
+    "plt.rcParams['figure.dpi'] = 100\n",
+    "torch.set_printoptions(linewidth=160)\n",
+    "from datetime import datetime\n",
+    "print('starting date time ', datetime.now())\n",
+    "torch.manual_seed(1)\n",
+    "\n",
+    "fig_loc = '../data/data_ss/figures/'\n",
+    "mod_loc = '../data/data_ss/models/'\n",
+    "if not(os.path.isdir(fig_loc + f'/{rid}/')): \n",
+    "    print('made a new folder')\n",
+    "    os.mkdir(fig_loc + f'{rid}/')\n",
+    "    os.mkdir(mod_loc + f'{rid}/')\n",
+    "fig_loc = fig_loc + f'{rid}/'\n",
+    "mod_loc = mod_loc + f'{rid}/'\n",
+    "\n",
+    "if torch.__version__[:5] != '1.8.1':\n",
+    "    def mydet(x):\n",
+    "        return x.det()\n",
+    "    RAdam = torch.optim.RAdam\n",
+    "else:\n",
+    "    RAdam = optim.RAdam\n",
+    "\n",
+    "torch.autograd.set_detect_anomaly(False)\n",
+    "from vae_model import *\n",
+    "class NN_s6(nn.Module):\n",
+    "    \"\"\"This is recursive Wiener filter version, with Rb threshold of [1e-3, 1e2]\n",
+    "    Input shape [I,M,N,F], e.g.[32,3,100,100]\n",
+    "    J <=K\n",
+    "    \"\"\"\n",
+    "    def __init__(self, M=3, K=3, im_size=100):\n",
+    "        super().__init__()\n",
+    "        self.dz = 32\n",
+    "        self.J, self.M = K, M\n",
+    "        self.hnet = nn.Sequential(\n",
+    "            nn.Linear(18,128),\n",
+    "            nn.BatchNorm1d(128),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Linear(128,128),\n",
+    "            nn.BatchNorm1d(128),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Linear(128,128),\n",
+    "            nn.BatchNorm1d(128),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Linear(128,64),\n",
+    "            nn.BatchNorm1d(64),\n",
+    "            nn.ReLU(inplace=True),\n",
+    "            nn.Linear(64,1)\n",
+    "        )\n",
+    "\n",
+    "        self.encoder = nn.Sequential(\n",
+    "            Down(in_channels=1, out_channels=64),\n",
+    "            DoubleConv(in_channels=64, out_channels=32),\n",
+    "            Down(in_channels=32, out_channels=16),\n",
+    "            DoubleConv(in_channels=16, out_channels=1),\n",
+    "            )\n",
+    "        self.fc1 = nn.Linear(25*25, 2*self.dz)\n",
+    "        self.decoder = nn.Sequential(\n",
+    "            nn.Linear(self.dz, 25*25),\n",
+    "            Reshape(-1, 1, 25, 25),\n",
+    "            Up_(in_channels=1, out_channels=64),\n",
+    "            DoubleConv(in_channels=64, out_channels=32),\n",
+    "            Up_(in_channels=32, out_channels=16),\n",
+    "            DoubleConv(in_channels=16, out_channels=4),\n",
+    "            OutConv(in_channels=4, out_channels=1),\n",
+    "            ) \n",
+    "\n",
+    "    def reparameterize(self, mu, logvar):\n",
+    "        std = torch.exp(0.5*logvar)\n",
+    "        eps = torch.randn_like(std)\n",
+    "        return mu + eps*std\n",
+    "\n",
+    "    def forward(self, x):     \n",
+    "        btsize, _, N, F = x.shape\n",
+    "        z_all, v_all, h_all = [], [], []\n",
+    "        ch = np.pi*torch.arange(self.M, device=x.device)\n",
+    "        x0 = x.permute(0,2,3,1)[...,None]\n",
+    "        Rx = x0 @ x.permute(0,2,3,1).conj()[...,None,:]\n",
+    "        rx = Rx.mean(dim=(1,2)) # shape of [I,M,M]\n",
+    "        rx_inv0 = rx.pinverse()\n",
+    "        b = x0\n",
+    "        for i in range(self.J):\n",
+    "            if i > 0 :\n",
+    "                rx = (b@b.transpose(-1,-2).conj()).mean(dim=(1,2))\n",
+    "            ang = self.hnet(torch.stack((rx.real, rx.imag), dim=1).reshape(btsize,-1))\n",
+    "            temp = ang@ch[None,:]\n",
+    "            hhat = (1j*temp).exp()\n",
+    "            h_all.append(hhat)\n",
+    "        \n",
+    "            w = rx_inv0@hhat[...,None] / \\\n",
+    "                    (hhat[:,None,:].conj()@rx_inv0@hhat[...,None])\n",
+    "            shat = w.permute(0,2,1).conj()[:,None,None]@x0\n",
+    "            b = b - shat*hhat[:, None,None,:,None]\n",
+    "        \n",
+    "            \"Encoder\"\n",
+    "            xx = self.encoder(shat.squeeze()[:,None].abs())\n",
+    "            \"Get latent variable\"\n",
+    "            zz = self.fc1(xx.reshape(btsize,-1))\n",
+    "            mu = zz[:,::2]\n",
+    "            logvar = zz[:,1::2]\n",
+    "            z = self.reparameterize(mu, logvar)\n",
+    "            z_all.append(z)\n",
+    "            \n",
+    "            \"Decoder to get V\"\n",
+    "            v = self.decoder(z).square()\n",
+    "            v_all.append(threshold(v, floor=1e-3, ceiling=1e2)) # 1e-3 to 1e2\n",
+    "        Hhat = torch.stack(h_all, 2) # shape:[I, M, K]\n",
+    "        Rb = (b@b.conj().permute(0,1,2,4,3)).mean(dim=(1,2)).squeeze()\n",
+    "        vhat = torch.stack(v_all, 4).squeeze().to(torch.cfloat) # shape:[I, N, F, K]\n",
+    "        zall = torch.stack(z_all, dim=1)\n",
+    "        return vhat.diag_embed(), Hhat, Rb, mu, logvar, zall\n",
+    "\n",
+    "\n",
+    "def loss_fun(x, Rs, Hhat, Rb, mu, logvar, zall, beta=1e-3):\n",
+    "    x = x.permute(0,2,3,1)\n",
+    "    kl = -0.5 * torch.sum(1 + logvar - mu.pow(2) - logvar.exp())\n",
+    "    Rxperm = Hhat @ Rs.permute(1,2,0,3,4) @ Hhat.transpose(-1,-2).conj() + Rb\n",
+    "    Rx = Rxperm.permute(2,0,1,3,4) # shape of [I, N, F, M, M]\n",
+    "    ll = -(np.pi*mydet(Rx)).log() - (x[...,None,:].conj()@Rx.inverse()@x[...,None]).squeeze() \n",
+    "\n",
+    "    # HHt = Hhat@Hhat.permute(0,2,1).conj() \n",
+    "    # temp = x[...,None]@ x[:,:,:,None].conj()\n",
+    "    # rx = temp.mean(dim=(1,2))\n",
+    "    # term = (((rx- HHt/100).abs())**2).mean()\n",
+    "\n",
+    "    # 'fisher'\n",
+    "    # _, J, D = zall.shape\n",
+    "    # m = zall.mean(dim=(0,1))\n",
+    "    # sw, sb = 0, 0\n",
+    "    # for j in range(J):\n",
+    "    #     z = zall[:,j]\n",
+    "    #     mj = z.mean(0)\n",
+    "    #     sw = sw + ((z - mj)[...,None]@(z - mj)[:,None]).sum(0)\n",
+    "    #     sb = sb + D*(mj-m)[...,None]@(mj-m)[None,:]\n",
+    "    # term = 1e-3*(sw-sb).trace()\n",
+    "\n",
+    "    return -ll.mean().real, beta*kl\n",
+    "\n",
+    "#%% load data\n",
+    "I = 6000 # how many samples\n",
+    "M, N, F, J = 3, 100, 100, 3\n",
+    "NF = N*F\n",
+    "eps = 5e-4\n",
+    "opts = {}\n",
+    "opts['batch_size'] = 64\n",
+    "opts['lr'] = 1e-3\n",
+    "opts['n_epochs'] = 501\n",
+    "\n",
+    "d = torch.load('../data/nem_ss/tr9kM3FT100_ang6915-30.pt')\n",
+    "d = awgn_batch(d, snr=30, seed=1)\n",
+    "xtr = (d/d.abs().amax(dim=(1,2,3), keepdim=True)) # [sample,M,N,F]\n",
+    "xtr = xtr.to(torch.cfloat)\n",
+    "data = Data.TensorDataset(xtr[:I])\n",
+    "tr = Data.DataLoader(data, batch_size=opts['batch_size'], shuffle=True, drop_last=True)\n",
+    "xval, _ , hgt0 = torch.load('../data/nem_ss/val500M3FT100_xsh_ang6915-30.pt')\n",
+    "hgt = torch.tensor(hgt0).to(torch.cfloat)\n",
+    "xval = xval/xval.abs().amax(dim=(1,2,3), keepdim=True)\n",
+    "xval_cuda = xval[:128].to(torch.cfloat).cuda()\n",
+    "\n",
+    "#%%\n",
+    "loss_iter, loss_tr, loss1, loss2, loss_eval = [], [], [], [], []\n",
+    "NN = NN_s6\n",
+    "model = NN(M,J,N).cuda()\n",
+    "# for w in model.parameters():\n",
+    "#     nn.init.normal_(w, mean=0., std=0.01)\n",
+    "\n",
+    "optimizer = RAdam(model.parameters(),\n",
+    "                lr= opts['lr'],\n",
+    "                betas=(0.9, 0.999), \n",
+    "                eps=1e-8,\n",
+    "                weight_decay=0)\n",
+    "\n",
+    "for epoch in range(opts['n_epochs']):\n",
+    "    model.train()\n",
+    "    for i, (x,) in enumerate(tr): \n",
+    "        x = x.cuda()\n",
+    "        optimizer.zero_grad()         \n",
+    "        Rs, Hhat, Rb, mu, logvar, zall= model(x)\n",
+    "        l1, l2 = loss_fun(x, Rs, Hhat, Rb, mu, logvar, zall)\n",
+    "        loss = l1 + l2\n",
+    "        loss.backward()\n",
+    "        torch.nn.utils.clip_grad_norm_(model.parameters(), max_norm=1)\n",
+    "        optimizer.step()\n",
+    "        torch.cuda.empty_cache()\n",
+    "\n",
+    "        if i%30 == 0:\n",
+    "            loss_tr.append(loss.detach().cpu().item()/opts['batch_size'])\n",
+    "            loss1.append(l1.detach().cpu().item()/opts['batch_size'])\n",
+    "            loss2.append(l2.detach().cpu().item()/opts['batch_size'])\n",
+    "\n",
+    "    if epoch%10 == 0:\n",
+    "        print(epoch)\n",
+    "        plt.figure()\n",
+    "        plt.plot(loss_tr, '-or')\n",
+    "        plt.title(f'Loss fuction at epoch{epoch}')\n",
+    "        plt.savefig(fig_loc + f'Epoch{epoch}_LossFunAll')\n",
+    "\n",
+    "        plt.figure()\n",
+    "        plt.plot(loss1, '-og')\n",
+    "        plt.title(f'Reconstruction loss at epoch{epoch}')\n",
+    "        plt.savefig(fig_loc + f'Epoch{epoch}_Loss1')\n",
+    "\n",
+    "        plt.figure()\n",
+    "        plt.plot(loss2, '-og')\n",
+    "        plt.title(f'KL loss at epoch{epoch}')\n",
+    "        plt.savefig(fig_loc + f'Epoch{epoch}_Loss2')\n",
+    "\n",
+    "        plt.figure()\n",
+    "        plt.plot(loss_tr[-50:], '-or')\n",
+    "        plt.title(f'Last 50 of loss at epoch{epoch}')\n",
+    "        plt.savefig(fig_loc + f'Epoch{epoch}_last50')\n",
+    "\n",
+    "        model.eval()\n",
+    "        with torch.no_grad():\n",
+    "            Rs, Hhat, Rb, mu, logvar, zall= model(xval_cuda)\n",
+    "            l1, l2 = loss_fun(xval_cuda, Rs, Hhat, Rb, mu, logvar, zall)\n",
+    "            loss_eval.append((l1+l2).cpu().item()/128)\n",
+    "            plt.figure()\n",
+    "            plt.plot(loss_eval[-50:], '-xb')\n",
+    "            plt.title(f'last 50 validation loss at epoch{epoch}')\n",
+    "            plt.savefig(fig_loc + f'Epoch{epoch}_val') \n",
+    "            plt.close('all')           \n",
+    "\n",
+    "            av_hcorr = []\n",
+    "            for ind in range(128):\n",
+    "                hh = Hhat[ind].detach()\n",
+    "                av_hcorr.append(h_corr(hh.cpu(), hgt[ind]))\n",
+    "            print('first 3 h_corr',av_hcorr[:3],' averaged128:', sum(av_hcorr)/128)\n",
+    "\n",
+    "            plt.figure()\n",
+    "            for ind in range(3):\n",
+    "                hh = Hhat[ind].detach()\n",
+    "                rs0 = Rs[ind].detach() \n",
+    "                Rx = hh @ rs0 @ hh.conj().t() + Rb.detach()[ind]\n",
+    "                shat = (rs0 @ hh.conj().t() @ Rx.inverse()@xval_cuda.permute(0,2,3,1)[ind,:,:,:, None]).cpu() \n",
+    "                for ii in range(J):\n",
+    "                    plt.subplot(3,3,ii+1+ind*3)\n",
+    "                    plt.imshow(shat[:,:,ii,0].abs())\n",
+    "                    # plt.tight_layout(pad=1.1)\n",
+    "                    # if ii == 0 : plt.title(f'Epoch{epoch}_sample{ind}')\n",
+    "            plt.savefig(fig_loc + f'Epoch{epoch}_estimated sources')\n",
+    "            plt.show()\n",
+    "            plt.close('all')\n",
+    "            \n",
+    "        torch.save(model, mod_loc+f'model_epoch{epoch}.pt')\n",
+    "print('done')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
